# mac-toolkit

./: .gitignore  README.md  install.sh  main.py  main_gui.py  pyproject.toml  requirements.txt
modules/: auto_service.py  battery.py  console.py  diagnostics.py  diagnostics_engine.py  install_validator.py  menu.py  repairs.py  report.py  storage.py  stress.py  stress_engine.py  support_bundle.py  system.py  utils.py
modules/checks/: apfs.py  battery.py  bluetooth.py  camera.py  cpu.py  dns.py  fan_speed.py  filevault.py  gpu.py  internet_speed.py  keyboard.py  microphone.py  network_connectivity.py  oclp.py  opencore_readiness.py  power_adapter.py  privileges.py  ram.py  secure_boot.py  sip.py  software_update.py  speakers.py  stability.py  storage.py  temperature.py  thunderbolt.py  time_sync.py  trackpad.py  usb.py  wifi.py
modules/repairs/: cache_clear.py  dns_flush.py  engine.py  launch_services.py  mount_efi.py  software_update_check.py  spotlight_rebuild.py  time_machine.py  verify_apfs.py
modules/report/: generator.py
modules/utils/: base.py  config.py  health_score.py  logger.py  macos.py
packaging/scripts/: postinstall
scripts/: build_pkg.sh
